Fix infinite get Posts if no data returned; Modify directory structure for actions/auth; Fix body overflow hidden on Posts resolved bug; Modify FAIcon component; Add extra to reactions...make few UI adjustments.

--- a/teach-me-ui/src/styles/Main/Home/MiddlePane/Recommendations/_Recommendation.scss
+++ b/teach-me-ui/src/styles/Main/Home/MiddlePane/Recommendations/_Recommendation.scss
@@ -3,7 +3,7 @@
   border-radius: 1rem;
   height: 17rem;
   position: relative;
-  width: 11.5rem;
+  width: 12rem;
   overflow: hidden;
   scroll-snap-align: start;
   scroll-snap-stop: normal;
